# MaterialX

./: .env  .gitmodules  CMakeLists.txt  CMakePresets.json
.github/workflows/: automerge.yml  automerge_adsk_tag.yml  main.yml
contrib/: .gitignore  CMakeLists.txt
contrib/adsk/libraries/: CMakeLists.txt
contrib/adsk/libraries/adsklib/: adsk_colorcorrect.mtlx  adsklib_defs.mtlx  adsklib_legacy_defs.mtlx  adsklib_legacy_ng.mtlx  adsklib_ng.mtlx
contrib/adsk/libraries/adsklib/genglsl/: mx_hashnoise2d_vector3.glsl
contrib/adsk/libraries/adsklib/genosl/: mx_noise1d_float.osl
contrib/adsk/resources/: CMakeLists.txt
contrib/adsk/resources/Materials/Examples/Fusion/: bitmap.mtlx  glazing.mtlx  heightmap.mtlx  layered.mtlx  metal.mtlx  normalmap.mtlx  opaque.mtlx  transparent.mtlx
contrib/adsk/resources/Materials/Examples/Proceduralwood/: wood_presets.mtlx
contrib/adsk/resources/Materials/Examples/Revit/: ceramic.mtlx  checker.mtlx  concrete.mtlx  generic.mtlx  glass.mtlx  glazing.mtlx  gradient.mtlx  hardwood.mtlx  knurl.mtlx  marble.mtlx  masonry.mtlx  metal.mtlx  metallicpaint.mtlx  mirror.mtlx  noise.mtlx  plastic.mtlx  speckle.mtlx  stone.mtlx  tiles.mtlx  wallpaint.mtlx  water.mtlx  waves.mtlx  wood.mtlx
contrib/tests/: DESIGN.md  conftest.py  pyproject.toml  render_test_utils.py  test_render.py  test_render_metashade.py
contrib/utilities/scripts/: publishAdskMaterials.py
contrib/utilities/scripts/rendertest/: README.md  __init__.py
contrib/utilities/scripts/rendertest/mtlxutils/: __init__.py  mxbase.py  mxrenderer.py  mxshadergen.py  render_material.py
resources/Materials/TestSuite/: _options.mtlx
source/MaterialXGenGlsl/: GlslShaderGenerator.cpp
source/MaterialXMetashade/: CMakeLists.txt  MetashadeNode.cpp
source/MaterialXTest/MaterialXGenShader/: GenShaderUtil.cpp  GenShaderUtil.h
source/MaterialXTest/MaterialXRender/: RenderUtil.cpp
source/MaterialXTest/MaterialXRenderGlsl/: RenderGlsl.cpp
source/PyMaterialX/: CMakeLists.txt
source/PyMaterialX/PyMaterialXMetashade/: CMakeLists.txt  Export.h  Library.h  MetashadeNode.cpp  MetashadeNode.h  MetashadeNodePython.cpp  PyModule.cpp
